--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%
 }
 
 h1{
-    font-size: 50px;
+    font-size: 40px;
 }
 h2{
-    font-size: 40px;
+    font-size: 30px;
 }
 .first-name{
     color:  orange;
@@ -21,4 +22,79 @@ h2{
     padding: 5%;
     width: 70%;
 
+}
+.first-sec{
+    background-image: url("image/top-banner.png");
+    background-repeat: no-repeat;
+}
+
+section{
+    height: 500px;
+}
+ .hire-b{
+    text-decoration: none;
+    background-color: coral;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+ }
+ .head-text-2{
+    width: 40%;
+    float: left;
+    padding: 2%;
+ }
+
+ .head-text-2 img{
+    width: 60%;
+    margin-left: 150px;
+       
+ }
+ .head-text-3{
+    width: 40%;
+    float: left;
+    margin-left: -3%;
+    padding: 2%;
+ }
+ .second-sec{
+    background-image: url("image/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+
+ }
+ .second-sec{
+    height: 1000PX;
+ }
+.head-text3{
+    font-size: 30PX;
+    font-weight: bold;
+}
+
+.box1{
+    width: 35%;
+    float: left;
+    padding: 20px;
+    margin-left: 150px;
+    box-shadow: 10px 10px 40px gray;
+    height: 300px;
+}
+.box1 h4{
+    font-size: 30px;
+    margin: 0;
+}
+.box-han{
+    color: coral;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.experiencesec{
+    height: 600px;
+    background-image: url("image/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+footer{
+    text-align: center;
+    padding: 20px;
+    font-size: 15px;
 }
